<resources>
    <string name="app_name">Meal Time!</string>
    <string name="app_title">Jedzonko</string>
    <string name="action_settings">Settings</string>
    <string name="login_btn">Log in</string>
    <string name="login_et">example@com.pl</string>
    <string name="password_et">Password</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="your_week_btn">Your week plan</string>
    <string name="your_diet_btn">Your diet</string>
    <string name="recipies_btn">Recipies</string>
    <string name="groceries_btn">Grocieries</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="igredients">Ingredients:</string>
    <string name="howTo">How to prepare:</string>
    <string name="recommended">Recommended</string>
    <string name="welcome_to">Welcome to</string>
    <string name="start_customization">Start customization</string>
    <string name="skip_customization">Skip customization</string>
    <string name="diet_prefer">What diet do you prefer?</string>
    <string name="diet_standard">Standard</string>
    <string name="diet_paleo">Paleo</string>
    <string name="diet_vegetarian">Vegetarian</string>
    <string name="diet_pescatarian">Pescatarian</string>
    <string name="diet_flexitarian">Flexitarian</string>
    <string name="diet_vegan">Vegan</string>
    <string name="diet_low_carb">Low carb</string>
    <string name="diet_keto">Ketogenic</string>
    <string name="allergy_gluten">Gluten</string>
    <string name="allergy_dairy">Dairy</string>
    <string name="allergy_peanut">Peanuts</string>
    <string name="allergy_treenuts">Tree nuts</string>
    <string name="allergy_soy">Soy</string>
    <string name="allergy_eggs">Eggs</string>
    <string name="allergy_frutti_di_mare">Frutti di mare</string>
    <string name="allergy_seasme">Sesame</string>
    <string name="select_allergies">What allergies do you have?</string>
    <string name="what_you_dislike">What ingredients do you dislike?</string>
    <string name="avocado">Avocado</string>
    <string name="beets">Beets</string>
    <string name="bell_pepper">Bell pepper</string>
    <string name="brussel_sprout">Brussel sprout</string>
    <string name="egg_plant">Egg plant</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="plan_meals_for">How many meals do you usually plan?</string>
    <string name="servings_per_meal">How many servings per meal?</string>
    <string name="cooking_time_per_meal">Cooking time per meal</string>
    <string name="zero_thirty">0–30 min</string>
    <string name="thirty_sixty">30–60 min</string>
    <string name="sixty_plus">60+ min</string>
    <string name="quick_n_easy">Quick and easy</string>
    <string name="typical">Typical</string>
    <string name="up_for_challange">I\'m up for challenge!</string>
    <string name="next">Next</string>
    <string name="thank_you_customization">Good work!\nYou\'ve just set up the app!\nClick “Next”
        to jump into app!</string>
    <string name="totalLikes"><b>Total likes:</b></string>
    <string name="views_nr"><b>Views nr:</b></string>
    <string name="cooking_time">Cooking time: </string>
    <string name="likes">Likes: </string>
    <string name="good_for">Good for: </string>
    <string name="ingredients">Ingredients</string>
    <string name="cooking_steps">Cooking Steps</string>
    <string name="comments_section"><u>Comments:</u></string>
    <string name="about_meal"><u>About meal:</u></string>
    <string name="login_failed">Incorrect e-mail or password.</string>
    <string name="login_no_acc_error">Something gone wrong please try again later.</string>
    <string name="email">E-mail</string>
    <string name="email2">E-mail:</string>
    <string name="password">Password</string>
    <string name="password2">Password:</string>
    <string name="no_account">No account?</string>
    <string name="create_one"><u>Create one!</u></string>
    <string name="continue_without_login">Continue without login</string>
    <string name="facebook_app_id">581419312749031</string>
    <string name="fb_login_protocol_scheme">fb581419312749031</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="account_info"><b>Account information</b></string>
    <string name="location">Location:</string>
    <string name="meals_prefs"><b>Meals preferences</b></string>
    <string name="portions_per_meal">Portions per meal:</string>
    <string name="meals_per_mealplan">Meals per meal plan:</string>
    <string name="cooking_time_label">Preferred cooking time:</string>
    <string name="food_preferences"><b>Food preferences</b></string>
    <string name="diet_label">Diet:</string>
    <string name="allergies_label">Allergies:</string>
    <string name="avoided_ingredients_label">Avoided ingredients:</string>
    <string name="nutrition_profile"><b>Nutrition profile</b></string>
    <string name="sex_label">Sex:</string>
    <string name="height_label">Height:</string>
    <string name="weight_label">Weight:</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm">Confirm</string>
    <string name="location_entry_hint">Country, city</string>
    <string name="loading">Loading…</string>
    <string name="delete">Delete</string>
    <string name="your_plan"><b>Your plan:</b></string>
    <string name="list_of_ingredients"><b>List of ingredients</b></string>
    <string name="amount">Amount</string>
    <string name="cooking_steps2"><b>Cooking steps</b></string>
    <string name="step">Step</string>
    <string name="shopping_list">Shopping list</string>
    <string name="search">Search…</string>
    <string name="cooking_mode">Cooking mode</string>
    <string name="password_confirmation_failed">Password and confirmation don\'t match.</string>
    <string name="sign_up_successful">Account has been successfully created, welcome!</string>
    <string name="sign_up_failed">Account could not be created. Contact us for support!</string>
    <string name="password_not_match_current">Current password you provided is incorrect.</string>
    <string name="male_sex">Male</string>
    <string name="female_sex">Female</string>
    <string name="add_chip">+ Add</string>
    <string name="no_ingredient_selected">You need to select at least 1 item.</string>
    <string name="specify_height">Specify height</string>
    <string name="weight_edition_label">Type in your weight in</string>
    <string name="height_edition_label">Type in your height in</string>
    <string name="goal_edition_label">Type in your weekly goal in</string>
    <string name="age_edition_label">Type in your age</string>
    <string name="centimeters">centimeters</string>
    <string name="inches">inches</string>
    <string name="no_items_on_list">No items on the list</string>
    <string name="meal_plans">Meal Plans</string>
    <string name="home">Home</string>
    <string name="cookbook">Cookbook</string>
    <string name="nutrition">Nutrition</string>
    <string name="kg">kg</string>
    <string name="next_step">Next step</string>
    <string name="finish_cooking">Finish cooking</string>
    <string name="lbs">cm</string>
    <string name="height_out_of_range">Value must be between 100 and 300</string>
    <string name="weight_out_of_range">Value must be between 30 and 400</string>
    <string name="other">Other</string>
    <string name="username">Username</string>
    <string name="password_too_short">Password must be at least 6 characters long.</string>
    <string name="sign_up_server_error">There was an error during account creation,
        please contact administrator for help.</string>
    <string name="invalid_email">Invalid email. Please correct.</string>
    <string name="invalid_login_credentials">Invalid login credentials. Please correct.</string>
    <string name="sign_up_incomplete_data">You need to fill in all the fields!</string>
    <string name="all">All</string>
    <string name="goal_hint">e.g. -0.5/+0.5 or 0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_location">Map</string>
    <string name="title_activity_edit_location">Map</string>
    <string name="previous">Previous</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="portion_amount_in_meal">Portion amount in meal</string>
    <string name="preferred_cooking_time">Preferred cooking time in minutes</string>
    <string name="fifteenmin">15</string>
    <string name="thirteenmin">30</string>
    <string name="fortyfivemin">45</string>
    <string name="sixteenmin">60</string>
    <string name="five">5</string>
    <string name="finish">finish</string>
    <string name="soup">Soup</string>
    <string name="fish">Fish</string>
    <string name="pasta">Pasta</string>
    <string name="what_type_of_recipe_you_don_t_like_cooking">What type of recipe you don\'t like cooking</string>
    <string name="grill">Grill</string>
    <string name="no_settings_data_received">We are sorry but there was problem with server connection.
    Please contact our support.</string>
    <string name="meals_planer_logo">Meals planer logo</string>
    <string name="goal">Goal:</string>
    <string name="kilogram_per_week">kg/week</string>
    <string name="incorrect_format">Incorrect format.</string>
    <string name="age">Age:</string>
    <string name="activity_level">Activity level:</string>
    <string name="age_out_of_range">Age is out of range</string>
    <string name="activity_level_spinner_label">Select your activity level</string>
    <string name="country_spinner_label">Select your country</string>
    <string name="voice_control_instruction">Press microphone to start listening.\nSay next for
    next step or previous for previous step.</string>
    <string name="voice_control_inactive">Voice control turned off.</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="user_profile_fragment_id">User Profile</string>
    <string name="caloric_balance">Caloric balance</string>
    <string name="kcal">kcal</string>
    <string name="all_targets">All targets</string>
    <string name="energy">Energy</string>
    <string name="protein">Proteins</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="vit_a">Vit. A</string>
    <string name="vit_b1">Vit. B1</string>
    <string name="vit_b2">Vit. B2</string>
    <string name="vit_b3">Vit. B3</string>
    <string name="vit_b5">Vit. B5</string>
    <string name="vit_b6">Vit. B6</string>
    <string name="vit_b12">Vit. B12</string>
    <string name="vit_c">Vit. C</string>
    <string name="vit_d">Vit. D</string>
    <string name="vit_e">Vit. E</string>
    <string name="vit_k">Vit. K</string>
    <string name="foliate">Foliate</string>
    <string name="calcium">Calcium</string>
    <string name="copper">Copper</string>
    <string name="iron">Iron</string>
    <string name="magnesium">Magnesium</string>
    <string name="manganese">Manganese</string>
    <string name="potassium">Potassium</string>
    <string name="selenium">Selenium</string>
    <string name="zinc">Zinc</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="general">General</string>
    <string name="vitamin_targets">Vitamin targets</string>
    <string name="mineral_targets">Mineral targets</string>
    <string name="do_it_later">Do it later</string>
    <string name="portionPreferenceLabel">Portion preference</string>
    <string name="cookingTimePreferenceLabel">Max cooking time</string>
</resources>