<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activities.recipes.RecipeActivity"
    tools:showIn="@layout/activity_recipe">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/tempImgView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@mipmap/zen_na_talerzu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="@id/tempImgView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/imageContainer">

        </LinearLayout>
    </HorizontalScrollView>
    <TextView
            android:id="@+id/cookingTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cooking_time" />

        <TextView
            android:id="@+id/likedByTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/likes" />

        <TextView
            android:id="@+id/goodForTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_for" />
        <Button
            android:id="@+id/goToIngredientsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingredients" />

        <Button
            android:id="@+id/goToCookingStepsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cooking_steps" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_meal"
        style="@style/listHeaderText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aboutMealTV"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/comments_section"
        android:id="@+id/commentsSectionTV"
        style="@style/RecipeTitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commentsSection"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>